--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >
 # root of your server.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: arielle0222.github.io
-cover: "/assets/main_page.jpg"
+cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 
 # Build settings
