--- a/_config.yml
+++ b/_config.yml
@@ -54,11 +54,11 @@ jekyll-archives:
 
 # Category descriptions (for archive pages)
 descriptions:
-  - cat: jekyll
-    desc: "Posts describing Jekyll setup techniques."
+  - cat: "Story Garage"
+    desc: "This section covers all kinds of reviews, experiences, and more."
 
-  - cat: dummy
-    desc: "Just some placeholder posts, lorem ipsum and the rest."
+  - cat: "Code & Road"
+    desc: "This section focuses on programming, tutorials, and tech insights."
 
 # Social icons and sharing options
 #
