--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 plugins:
   - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
-  - jekyll-paginate-v2 #jekyll-paginate-v2
-
+  - jekyll-paginate
+  
 exclude:
   - "/vendor/"
 
@@ -30,18 +30,11 @@ highlightjs_theme: "monokai-sublime"
 
 # Pagination Settings
 # https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
+
 pagination:
   enabled: true
-  per_page: 5
-  title: ":title"
-  sort_field: "date"
-  sort_reverse: true
-  permalink: "/page/:num/"
-
-"pagination:
-  enabled: true
-  per_page: 1
-  permalink: "/page/:num/"
+  per_page: 1 # 한 페이지에 표시할 포스트 수
+  permalink: "/page/:num/" # 페이지네이션의 URL 구조
   sort_reverse: true"
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
