--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title: Arielle's Auto Odyssey
 subtitle: "Every car has a story. Every road has a destination."
 email: seohee70428@gmail.com 
 name: SEOHEE KIM(ARIELLE)
-description: >
-  A simple yet classy theme for your Jekyll website or blog.
+description: 
+  I wish software-driven automobiles offer seamless mobility and ensure free from accidents. 🚗
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
@@ -77,39 +77,18 @@ descriptions:
 #     desc: Follow me on Twitter            # Description to display as link title, etc
 #     share: true                           # Include in the "Share" section of posts
 social:
-  - name: Twitter
-    icon: twitter
-    username: TheBenCentra
-    url: https://twitter.com/TheBenCentra
-    desc: Follow me on Twitter
-    share: true
-
-  - name: Facebook
-    icon: facebook
-    username: thebencentra
-    url: ""
-    desc: Friend me on Facebook
-    share: true
-
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
-    desc: Fork me on GitHub
+    username: Arielle(KIM SEOHEE)
+    url: https://github.com/Arielle0222
+    #desc: Fork me on GitHub
     share: false
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+    username: Arielle(KIM SEOHEE)
+    url: https://www.linkedin.com/in/seohee-kim-12ab1b316/
     desc: Connect with me on LinkedIn
-    share: true
-
-  - name: Google+
-    icon: google-plus
-    username: ""
-    url: ""
-    desc: Add me to your Circles
     share: true
 
   - name: YouTube
