--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 plugins:
   - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
-  - jekyll-paginate
+  - jekyll-paginate-v2
   
 exclude:
   - "/vendor/"
@@ -33,9 +33,10 @@ highlightjs_theme: "monokai-sublime"
 
 pagination:
   enabled: true
-  per_page: 1 # 한 페이지에 표시할 포스트 수
-  permalink: "/page/:num/" # 페이지네이션의 URL 구조
+  per_page: 5
+  permalink: "/page/:num/"
   sort_reverse: true
+
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
 jekyll-archives:
