--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ subtitle: "Every car has a story. Every road has a destination."
 email: seohee70428@gmail.com 
 name: SEOHEE KIM(ARIELLE)
 description: 
-  Enjoy the butterflies
+  Enjoy the butterflies 🦋
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
