--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,9 @@
 plugins:
   - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
-  - jekyll-paginate-v2
-  
+  - jekyll-paginate
+  #- jekyll-paginate-v2
+
 exclude:
   - "/vendor/"
 
@@ -31,11 +32,16 @@ highlightjs_theme: "monokai-sublime"
 # Pagination Settings
 # https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
 
-pagination:
-  enabled: true
-  per_page: 3
-  permalink: "/page/:num/"
-  sort_reverse: true
+#pagination:
+ #enabled: true
+  #per_page: 3
+  #permalink: "/page/:num/"
+  #sort_reverse: true
+  #collection: 'posts'
+
+paginate: 3  # 페이지당 포스트 수
+paginate_path: "/page:num"  # 페이지 경로
+
 
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
